removed classes from triangle, fix z-index .kaufman, ul li in .resources__logo-zone

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -6,4 +6,5 @@
   position: absolute;
   right: -210px;
   bottom: 0;
+  z-index: 1;
 }
