--- a/blocks/section-title/_theme/seciotn-title_theme_dark.css
+++ b/blocks/section-title/_theme/seciotn-title_theme_dark.css
@@ -1,3 +1,4 @@
 .section-title_theme_dark {
   color: #f2f2f2;
+  z-index: 4;
 }
